Fixing iOS viewing and overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -123,7 +123,7 @@ input {
 .mobile-text-container {
   position: fixed;
   width: 100%;
-  height: 80vh;
+  height: 65vh;
   margin-top: 2%;
   padding-left: 3.5%;
   overflow: scroll;
